--- a/packages/mobile-table/src/helperComponents/TableCard/styles.module.scss
+++ b/packages/mobile-table/src/helperComponents/TableCard/styles.module.scss
@@ -40,7 +40,7 @@
 }
 
 .cardRowHeader {
-  color: $sys-neutral-text-support;
+  color: $sys-neutral-text-light;
 }
 
 .cardRowContent {
